board size bug fixed on firefox browser

--- a/styles/game_board.css
+++ b/styles/game_board.css
@@ -6,20 +6,6 @@
   grid-auto-rows: 100px;
 }
 
-.controls {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-input:hover {
-  cursor: pointer;
-}
-
 .tile {
   box-sizing: border-box;
   width: 100px;
