--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -16,6 +16,29 @@ body {
   margin: 30px auto;
 }
 
+.controls {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+input:hover {
+  cursor: pointer;
+}
+
+#board_img {
+  width: 40px;
+  height: 40px;
+}
+
+#board_img:hover {
+  cursor: pointer;
+}
+
 #modal {
   position: fixed;
   top: 0;
